force-app/main/default/objects/Apttus_Approval__Approval_Matrix__c/fields/Apttus_Approval__Approver_2_Level__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Approver_2_Level__c</fullName>
    <label>Approver 2 Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Level 1</fullName>
            </value>
            <value>
                <fullName>Level 2</fullName>
            </value>
            <value>
                <fullName>Level 3</fullName>
            </value>
            <value>
                <fullName>Level 4</fullName>
            </value>
            <value>
                <fullName>Level 5</fullName>
            </value>
            <value>
                <fullName>Level 6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>