force-app/main/default/objects/Apttus_Approval__Approval_Matrix__c/fields/Apttus_Approval__Approver_3_Authorized_Discount__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Approver_3_Authorized_Discount__c</fullName>
    <label>Approver 3 Authorized Discount</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>