force-app/main/default/objects/Apttus_Approval__Approval_Matrix__c/fields/Apttus_Approval__Approver_4__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Approver_4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver 4</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N70000001lyC4EAI</relationshipName>
    <type>Lookup</type>
</CustomField>