force-app/main/default/objects/Apttus_Approval__Approval_Matrix__c/fields/Apttus_Approval__Error_Log__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Error_Log__c</fullName>
    <label>Error Log</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>