force-app/main/default/objects/Apttus_Approval__Approval_Matrix__c/fields/Apttus_Approval__Matrix_Owner__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Matrix_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Approval matrix owner</description>
    <inlineHelpText>Approval matrix owner</inlineHelpText>
    <label>Matrix Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approval_Matrices</relationshipName>
    <type>Lookup</type>
</CustomField>