force-app/main/default/objects/Apttus_Approval__Approval_Matrix__c/fields/Apttus_Approval__Next_Level_Approver__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Next_Level_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Level Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N700000028YyHEAU</relationshipName>
    <type>Lookup</type>
</CustomField>