force-app/main/default/objects/Apttus_Approval__Approval_Matrix__c/fields/Apttus_Approval__User__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N70000001lyCBEAY</relationshipName>
    <type>Lookup</type>
</CustomField>