force-app/main/default/objects/Apttus_Approval__Approval_Matrix__c/validationRules/Apttus_Approval__Approval_Level.validationRule-meta.xml
<ValidationRule>
    <fullName>Apttus_Approval__Approval_Level</fullName>
    <active>false</active>
    <description>Approval Level cannot be empty</description>
    <errorConditionFormula>ISPICKVAL(Apttus_Approval__Approval_Level__c, &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>Apttus_Approval__Approval_Level__c</errorDisplayField>
    <errorMessage>Approval Level cannot be empty</errorMessage>
</ValidationRule>