force-app/main/default/objects/Apttus_Approval__Approval_Matrix__c/validationRules/Apttus_Approval__Next_Level_Approver_For_Level_6.validationRule-meta.xml
<ValidationRule>
    <fullName>Apttus_Approval__Next_Level_Approver_For_Level_6</fullName>
    <active>true</active>
    <description>Next Level Approver should not be specified for Level 6 users.</description>
    <errorConditionFormula>AND((ISPICKVAL(Apttus_Approval__Approval_Level__c, &apos;Level 6&apos;)) , NOT(Apttus_Approval__Next_Level_Approver__c = &quot;&quot;))</errorConditionFormula>
    <errorDisplayField>Apttus_Approval__Next_Level_Approver__c</errorDisplayField>
    <errorMessage>Next Level Approver should not be specified for Level 6 users.</errorMessage>
</ValidationRule>