force-app/main/default/objects/Apttus_Approval__Approval_Matrix__c/validationRules/Apttus_Approval__Next_Level_Approver_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Apttus_Approval__Next_Level_Approver_Required</fullName>
    <active>true</active>
    <description>Next Level Approver required for all except Level 6 users.</description>
    <errorConditionFormula>AND(NOT(ISPICKVAL(Apttus_Approval__Approval_Level__c, &apos;Level 6&apos;) ) , Apttus_Approval__Next_Level_Approver__c = &quot;&quot; )</errorConditionFormula>
    <errorDisplayField>Apttus_Approval__Next_Level_Approver__c</errorDisplayField>
    <errorMessage>You have to specify a Next Level Approver for all except Level 6 users.</errorMessage>
</ValidationRule>