force-app/main/default/objects/Apttus_Approval__Approval_Matrix__c/listViews/Apttus_Approval__All.listView-meta.xml
<ListView>
    <fullName>Apttus_Approval__All</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Approval__Is_Active__c</columns>
    <columns>Apttus_Approval__Is_Valid__c</columns>
    <columns>Apttus_Approval__User__c</columns>
    <columns>Apttus_Approval__Approval_Level__c</columns>
    <columns>Apttus_Approval__Next_Level_Approver__c</columns>
    <columns>Apttus_Approval__Approver_1__c</columns>
    <columns>Apttus_Approval__Approver_1_Authorized_Discount__c</columns>
    <columns>Apttus_Approval__Approver_1_Level__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>